--- a/index.html
+++ b/index.html
@@ -142,18 +142,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				<div class="elementor-element elementor-element-60c6fd0b elementor-nav-menu--stretch elementor-nav-menu--dropdown-mobile elementor-nav-menu__text-align-center elementor-nav-menu--toggle elementor-nav-menu--burger elementor-widget elementor-widget-nav-menu" data-id="60c6fd0b" data-element_type="widget" id="main-nav" data-settings="{&quot;full_width&quot;:&quot;stretch&quot;,&quot;submenu_icon&quot;:{&quot;value&quot;:&quot;&lt;i class=\&quot;\&quot;&gt;&lt;\/i&gt;&quot;,&quot;library&quot;:&quot;&quot;},&quot;layout&quot;:&quot;horizontal&quot;,&quot;toggle&quot;:&quot;burger&quot;}" data-widget_type="nav-menu.default">
 				<div class="elementor-widget-container">
 			<link rel="stylesheet" href="./Sanitär Schweizer – Heizung _ Santär _ Solar_files/widget-nav-menu.min.css">			<nav class="elementor-nav-menu--main elementor-nav-menu__container elementor-nav-menu--layout-horizontal e--pointer-background e--animation-fade">
-				<ul id="menu-1-60c6fd0b" class="elementor-nav-menu" data-smartmenus-id="1729799828099794"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1495"><a href="https://sanitaer-schweizer.ch/dienstleistungen/" class="elementor-item">Dienstleistungen</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2051"><a href="https://sanitaer-schweizer.ch/ueber-uns/" class="elementor-item">Über uns</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1904"><a href="https://sanitaer-schweizer.ch/jobs/" class="elementor-item">Jobs</a></li>
+				<ul id="menu-1-60c6fd0b" class="elementor-nav-menu" data-smartmenus-id="1729799828099794"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1495"><a href="#" class="elementor-item">Dienstleistungen</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2051"><a href="#" class="elementor-item">Über uns</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1904"><a href="#" class="elementor-item">Jobs</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2088"><a href="https://sanitaer-schweizer.ch/kontakt/" class="elementor-item">Kontakt</a></li>
 </ul>			</nav>
 					<div class="elementor-menu-toggle" role="button" tabindex="0" aria-label="Menu Toggle" aria-expanded="false" style="">
 			<i aria-hidden="true" role="presentation" class="elementor-menu-toggle__icon--open eicon-menu-bar"></i><i aria-hidden="true" role="presentation" class="elementor-menu-toggle__icon--close eicon-close"></i>			<span class="elementor-screen-only">Menü</span>
 		</div>
 					<nav class="elementor-nav-menu--dropdown elementor-nav-menu__container" aria-hidden="true" style="width: 1851px; left: 0px; top: 44px; --menu-height: 0;">
-				<ul id="menu-2-60c6fd0b" class="elementor-nav-menu" data-smartmenus-id="17297998281019072"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1495"><a href="https://sanitaer-schweizer.ch/dienstleistungen/" class="elementor-item" tabindex="-1">Dienstleistungen</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2051"><a href="https://sanitaer-schweizer.ch/ueber-uns/" class="elementor-item" tabindex="-1">Über uns</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1904"><a href="https://sanitaer-schweizer.ch/jobs/" class="elementor-item" tabindex="-1">Jobs</a></li>
+				<ul id="menu-2-60c6fd0b" class="elementor-nav-menu" data-smartmenus-id="17297998281019072"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1495"><a href="#" class="elementor-item" tabindex="-1">Dienstleistungen</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2051"><a href="#" class="elementor-item" tabindex="-1">Über uns</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1904"><a href="#" class="elementor-item" tabindex="-1">Jobs</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2088"><a href="https://sanitaer-schweizer.ch/kontakt/" class="elementor-item" tabindex="-1">Kontakt</a></li>
 </ul>			</nav>
 				</div>
@@ -175,19 +175,19 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				<div class="elementor-element elementor-element-60c6fd0b elementor-nav-menu--stretch elementor-nav-menu--dropdown-mobile elementor-nav-menu__text-align-center elementor-nav-menu--toggle elementor-nav-menu--burger elementor-widget elementor-widget-nav-menu" data-id="60c6fd0b" data-element_type="widget" id="main-nav" data-settings="{&quot;full_width&quot;:&quot;stretch&quot;,&quot;submenu_icon&quot;:{&quot;value&quot;:&quot;&lt;i class=\&quot;\&quot;&gt;&lt;\/i&gt;&quot;,&quot;library&quot;:&quot;&quot;},&quot;layout&quot;:&quot;horizontal&quot;,&quot;toggle&quot;:&quot;burger&quot;}" data-widget_type="nav-menu.default">
 				<div class="elementor-widget-container">
 			<link rel="stylesheet" href="./Sanitär Schweizer – Heizung _ Santär _ Solar_files/widget-nav-menu.min.css">			<nav class="elementor-nav-menu--main elementor-nav-menu__container elementor-nav-menu--layout-horizontal e--pointer-background e--animation-fade">
-				<ul id="menu-1-60c6fd0b" class="elementor-nav-menu"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1495"><a href="https://sanitaer-schweizer.ch/dienstleistungen/" class="elementor-item">Dienstleistungen</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2051"><a href="https://sanitaer-schweizer.ch/ueber-uns/" class="elementor-item">Über uns</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1904"><a href="https://sanitaer-schweizer.ch/jobs/" class="elementor-item">Jobs</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2088"><a href="https://sanitaer-schweizer.ch/kontakt/" class="elementor-item">Kontakt</a></li>
+				<ul id="menu-1-60c6fd0b" class="elementor-nav-menu"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1495"><a href="#" class="elementor-item">Dienstleistungen</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2051"><a href="#" class="elementor-item">Über uns</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1904"><a href="#" class="elementor-item">Jobs</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2088"><a href="impressum.html" class="elementor-item">impressum</a></li>
 </ul>			</nav>
 					<div class="elementor-menu-toggle" role="button" tabindex="0" aria-label="Menu Toggle" aria-expanded="false">
 			<i aria-hidden="true" role="presentation" class="elementor-menu-toggle__icon--open eicon-menu-bar"></i><i aria-hidden="true" role="presentation" class="elementor-menu-toggle__icon--close eicon-close"></i>			<span class="elementor-screen-only">Menü</span>
 		</div>
 					<nav class="elementor-nav-menu--dropdown elementor-nav-menu__container" aria-hidden="true">
-				<ul id="menu-2-60c6fd0b" class="elementor-nav-menu"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1495"><a href="https://sanitaer-schweizer.ch/dienstleistungen/" class="elementor-item" tabindex="-1">Dienstleistungen</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2051"><a href="https://sanitaer-schweizer.ch/ueber-uns/" class="elementor-item" tabindex="-1">Über uns</a></li>
+				<ul id="menu-2-60c6fd0b" class="elementor-nav-menu"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1495"><a href="#" class="elementor-item" tabindex="-1">Dienstleistungen</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2051"><a href="#" class="elementor-item" tabindex="-1">Über uns</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1904"><a href="https://sanitaer-schweizer.ch/jobs/" class="elementor-item" tabindex="-1">Jobs</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2088"><a href="https://sanitaer-schweizer.ch/kontakt/" class="elementor-item" tabindex="-1">Kontakt</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2088"><a href="impressum.html" class="elementor-item" tabindex="-1">impressum</a></li>
 </ul>			</nav>
 				</div>
 				</div>
