--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				<ul id="menu-1-60c6fd0b" class="elementor-nav-menu" data-smartmenus-id="1729799828099794"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1495"><a href="#" class="elementor-item">Dienstleistungen</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2051"><a href="#" class="elementor-item">Über uns</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1904"><a href="#" class="elementor-item">Jobs</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2088"><a href="https://sanitaer-schweizer.ch/kontakt/" class="elementor-item">Kontakt</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2088"><a href="impressum.html" class="elementor-item">impressum</a></li>
 </ul>			</nav>
 					<div class="elementor-menu-toggle" role="button" tabindex="0" aria-label="Menu Toggle" aria-expanded="false" style="">
 			<i aria-hidden="true" role="presentation" class="elementor-menu-toggle__icon--open eicon-menu-bar"></i><i aria-hidden="true" role="presentation" class="elementor-menu-toggle__icon--close eicon-close"></i>			<span class="elementor-screen-only">Menü</span>
@@ -154,7 +154,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				<ul id="menu-2-60c6fd0b" class="elementor-nav-menu" data-smartmenus-id="17297998281019072"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1495"><a href="#" class="elementor-item" tabindex="-1">Dienstleistungen</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2051"><a href="#" class="elementor-item" tabindex="-1">Über uns</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1904"><a href="#" class="elementor-item" tabindex="-1">Jobs</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2088"><a href="https://sanitaer-schweizer.ch/kontakt/" class="elementor-item" tabindex="-1">Kontakt</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2088"><a href="impressum.html" class="elementor-item" tabindex="-1">impressum</a></li>
 </ul>			</nav>
 				</div>
 				</div>
@@ -178,7 +178,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				<ul id="menu-1-60c6fd0b" class="elementor-nav-menu"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1495"><a href="#" class="elementor-item">Dienstleistungen</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2051"><a href="#" class="elementor-item">Über uns</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1904"><a href="#" class="elementor-item">Jobs</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2088"><a href="impressum.html" class="elementor-item">impressum</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2088"><a href="#" class="elementor-item">impressum</a></li>
 </ul>			</nav>
 					<div class="elementor-menu-toggle" role="button" tabindex="0" aria-label="Menu Toggle" aria-expanded="false">
 			<i aria-hidden="true" role="presentation" class="elementor-menu-toggle__icon--open eicon-menu-bar"></i><i aria-hidden="true" role="presentation" class="elementor-menu-toggle__icon--close eicon-close"></i>			<span class="elementor-screen-only">Menü</span>
@@ -187,7 +187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				<ul id="menu-2-60c6fd0b" class="elementor-nav-menu"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1495"><a href="#" class="elementor-item" tabindex="-1">Dienstleistungen</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2051"><a href="#" class="elementor-item" tabindex="-1">Über uns</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1904"><a href="https://sanitaer-schweizer.ch/jobs/" class="elementor-item" tabindex="-1">Jobs</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2088"><a href="impressum.html" class="elementor-item" tabindex="-1">impressum</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2088"><a href="#" class="elementor-item" tabindex="-1">impressum</a></li>
 </ul>			</nav>
 				</div>
 				</div>
