--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				<div class="elementor-element elementor-element-571e0b1 elementor-button-success elementor-align-justify elementor-widget elementor-widget-button" data-id="571e0b1" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://sanitaer-schweizer.ch/kontakt">
+			<a class="elementor-button elementor-button-link elementor-size-sm" href="#">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">Kontakt aufnehmen</span>
 					</span>
@@ -276,7 +276,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				<div class="elementor-element elementor-element-15b56c95 elementor-align-right elementor-mobile-align-right elementor-widget elementor-widget-button" data-id="15b56c95" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://sanitaer-schweizer.ch/dienstleistungen/sanitaer-anlagen/">
+			<a class="elementor-button elementor-button-link elementor-size-sm" href="#">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">MEHR ERFAHREN</span>
 					</span>
@@ -309,7 +309,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				<div class="elementor-element elementor-element-15b56c95 elementor-align-right elementor-mobile-align-right elementor-widget elementor-widget-button" data-id="15b56c95" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://sanitaer-schweizer.ch/dienstleistungen/renovationen-umbau/">
+			<a class="elementor-button elementor-button-link elementor-size-sm" href="#">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">MEHR ERFAHREN</span>
 					</span>
@@ -342,7 +342,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				<div class="elementor-element elementor-element-15b56c95 elementor-align-right elementor-mobile-align-right elementor-widget elementor-widget-button" data-id="15b56c95" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://sanitaer-schweizer.ch/dienstleistungen/service-reparaturen/">
+			<a class="elementor-button elementor-button-link elementor-size-sm" href="#">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">MEHR ERFAHREN</span>
 					</span>
@@ -375,7 +375,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				<div class="elementor-element elementor-element-15b56c95 elementor-align-right elementor-mobile-align-right elementor-widget elementor-widget-button" data-id="15b56c95" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://sanitaer-schweizer.ch/dienstleistungen/heizung/">
+			<a class="elementor-button elementor-button-link elementor-size-sm" href="#">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">MEHR ERFAHREN</span>
 					</span>
@@ -408,7 +408,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				<div class="elementor-element elementor-element-15b56c95 elementor-align-right elementor-mobile-align-right elementor-widget elementor-widget-button" data-id="15b56c95" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://sanitaer-schweizer.ch/dienstleistungen/erneuerbare-energie/">
+			<a class="elementor-button elementor-button-link elementor-size-sm" href="#">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">MEHR ERFAHREN</span>
 					</span>
@@ -447,18 +447,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				</div>
 				<div class="elementor-element elementor-element-33c0810 elementor-widget elementor-widget-heading" data-id="33c0810" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h3 class="elementor-heading-title elementor-size-default">100% – Basel – unbefristet</h3>		</div>
+			<h3 class="elementor-heading-title elementor-size-default">100% – unbefristet</h3>		</div>
 				</div>
 				<div class="elementor-element elementor-element-4df42c4 elementor-widget elementor-widget-text-editor" data-id="4df42c4" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							Die Firma Sanitär Schweizer AG, gegründet 1947, ist Spezialist in allen Belangen rund um Heizung, Sanitär und Solar. Zu unseren Dienstleistungen gehören beispielsweise Reparaturen und Service von sanitären Anlagen und Heizungen, sowie Umbauten und Neubauten rund um den sanitären Bereich.						</div>
+							Rohrreinigung Augustin , ist Spezialist in allen Belangen rund um Heizung, Sanitär und Solar. Zu unseren Dienstleistungen gehören beispielsweise Reparaturen und Service von sanitären Anlagen und Heizungen, sowie Umbauten und Neubauten rund um den sanitären Bereich.						</div>
 				</div>
 				</div>
 		<div class="elementor-element elementor-element-929b58d e-con-full e-flex e-con e-child" data-id="929b58d" data-element_type="container">
 				<div class="elementor-element elementor-element-cb8b729 elementor-align-right elementor-mobile-align-right elementor-widget elementor-widget-button" data-id="cb8b729" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://sanitaer-schweizer.ch/jobs/heizungs-sanitaerinstallateur/">
+			<a class="elementor-button elementor-button-link elementor-size-sm" href="#">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">MEHR ERFAHREN</span>
 					</span>
@@ -476,18 +476,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				</div>
 				<div class="elementor-element elementor-element-33c0810 elementor-widget elementor-widget-heading" data-id="33c0810" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h3 class="elementor-heading-title elementor-size-default">100% – Basel – unbefristet</h3>		</div>
+			<h3 class="elementor-heading-title elementor-size-default">100% – unbefristet</h3>		</div>
 				</div>
 				<div class="elementor-element elementor-element-4df42c4 elementor-widget elementor-widget-text-editor" data-id="4df42c4" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							Die Firma Sanitär Schweizer AG, gegründet 1947, ist Spezialist in allen Belangen rund um Heizung, Sanitär und Solar. Ein Traditionsunternehmen das jung geblieben ist. Ihr künftiger Arbeitgeber agiert selbstständig am Markt, erbringt professionelle Leistungen im Sanitärbereich und ist jederzeit mit den Neuheiten auf dem Markt vertraut.						</div>
+							Rohrreinigung Augustin , ist Spezialist in allen Belangen rund um Heizung, Sanitär und Solar. Ein Traditionsunternehmen das jung geblieben ist. Ihr künftiger Arbeitgeber agiert selbstständig am Markt, erbringt professionelle Leistungen im Sanitärbereich und ist jederzeit mit den Neuheiten auf dem Markt vertraut.						</div>
 				</div>
 				</div>
 		<div class="elementor-element elementor-element-929b58d e-con-full e-flex e-con e-child" data-id="929b58d" data-element_type="container">
 				<div class="elementor-element elementor-element-cb8b729 elementor-align-right elementor-mobile-align-right elementor-widget elementor-widget-button" data-id="cb8b729" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://sanitaer-schweizer.ch/jobs/sanitaerplaner-projektleiter/">
+			<a class="elementor-button elementor-button-link elementor-size-sm" href="#">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">MEHR ERFAHREN</span>
 					</span>
@@ -522,8 +522,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				<div class="elementor-element elementor-element-e7c2f1c elementor-view-default elementor-widget elementor-widget-icon" data-id="e7c2f1c" data-element_type="widget" data-widget_type="icon.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-icon-wrapper">
-			<div class="elementor-icon">
-			<i aria-hidden="true" class="fas fa-address-card"></i>			</div>
+			
 		</div>
 				</div>
 				</div>
@@ -533,15 +532,14 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				</div>
 				<div class="elementor-element elementor-element-575a7df elementor-widget elementor-widget-text-editor" data-id="575a7df" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<p><strong>Sanitär Schweizer AG</strong><br>Oberwilerstrasse 63<br>4102 Binningen</p><p>+41 (0)61 421 11 70<br><a href="mailto:info@sanitaer-schweizer.ch" target="_blank" rel="noopener">info@sanitaer-schweizer.ch</a></p>						</div>
+							<p><strong>Rohrreinigung Augustin</strong><br>Hirtenstieg 60<br>22848 Norderstedt</p><p>+X(0)XX<br><a href="mailto:info@rohrreinigung-augustin.de" target="_blank" rel="noopener">info@rohrreinigung-augustin.de</a></p>						</div>
 				</div>
 				</div>
 		<div class="elementor-element elementor-element-781c655 e-con-full e-flex e-con e-child" data-id="781c655" data-element_type="container">
 				<div class="elementor-element elementor-element-3768b5a elementor-view-default elementor-widget elementor-widget-icon" data-id="3768b5a" data-element_type="widget" data-widget_type="icon.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-icon-wrapper">
-			<div class="elementor-icon">
-			<i aria-hidden="true" class="fas fa-business-time"></i>			</div>
+			
 		</div>
 				</div>
 				</div>
@@ -551,15 +549,14 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				</div>
 				<div class="elementor-element elementor-element-4f43c3e elementor-widget elementor-widget-text-editor" data-id="4f43c3e" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<p><strong>Montag bis Freitag<br>8:00 – 12:00 und <br>13:00 – 17:00</strong></p>						</div>
+							<p><strong>guten tag</strong></p>						</div>
 				</div>
 				</div>
 		<div class="elementor-element elementor-element-a854f80 e-con-full e-flex e-con e-child" data-id="a854f80" data-element_type="container">
 				<div class="elementor-element elementor-element-b27f6c4 elementor-view-default elementor-widget elementor-widget-icon" data-id="b27f6c4" data-element_type="widget" data-widget_type="icon.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-icon-wrapper">
-			<div class="elementor-icon">
-			<i aria-hidden="true" class="fas fa-phone"></i>			</div>
+			
 		</div>
 				</div>
 				</div>
@@ -569,7 +566,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				</div>
 				<div class="elementor-element elementor-element-0fb656d elementor-widget elementor-widget-heading" data-id="0fb656d" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h2 class="elementor-heading-title elementor-size-default">+41 (0)61 421 11 70</h2>		</div>
+			<h2 class="elementor-heading-title elementor-size-default">+X(0)XX</h2>		</div>
 				</div>
 				</div>
 					</div>
@@ -578,17 +575,17 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 					<div class="e-con-inner">
 				<div class="elementor-element elementor-element-7164539c elementor-widget elementor-widget-heading" data-id="7164539c" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<div class="elementor-heading-title elementor-size-default">© 2024 SANITÄR SCHWEIZER AG, alle Rechte vorbehalten</div>		</div>
+			<div class="elementor-heading-title elementor-size-default">© 2024 Rohrreinigung Augustin, alle Rechte vorbehalten</div>		</div>
 				</div>
 				<div class="elementor-element elementor-element-0d6882d elementor-nav-menu__align-center elementor-nav-menu--dropdown-none elementor-widget elementor-widget-nav-menu" data-id="0d6882d" data-element_type="widget" data-settings="{&quot;layout&quot;:&quot;horizontal&quot;,&quot;submenu_icon&quot;:{&quot;value&quot;:&quot;&lt;i class=\&quot;fas fa-caret-down\&quot;&gt;&lt;\/i&gt;&quot;,&quot;library&quot;:&quot;fa-solid&quot;}}" data-widget_type="nav-menu.default">
 				<div class="elementor-widget-container">
 						<nav class="elementor-nav-menu--main elementor-nav-menu__container elementor-nav-menu--layout-horizontal e--pointer-none">
 				<ul id="menu-1-0d6882d" class="elementor-nav-menu" data-smartmenus-id="1729799828199682"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2116"><a href="https://sanitaer-schweizer.ch/impressum/" class="elementor-item">Impressum</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2114"><a href="https://sanitaer-schweizer.ch/datenschutz/" class="elementor-item">Datenschutz</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2114"><a href="#" class="elementor-item">Datenschutz</a></li>
 </ul>			</nav>
 						<nav class="elementor-nav-menu--dropdown elementor-nav-menu__container" aria-hidden="true" style="--menu-height: 0;">
 				<ul id="menu-2-0d6882d" class="elementor-nav-menu" data-smartmenus-id="1729799828200369"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2116"><a href="https://sanitaer-schweizer.ch/impressum/" class="elementor-item" tabindex="-1">Impressum</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2114"><a href="https://sanitaer-schweizer.ch/datenschutz/" class="elementor-item" tabindex="-1">Datenschutz</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2114"><a href="#" class="elementor-item" tabindex="-1">Datenschutz</a></li>
 </ul>			</nav>
 				</div>
 				</div>
