--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="profile" href="https://gmpg.org/xfn/11">
 	<title>Sanitär Schweizer – Heizung | Santär | Solar</title>
 <meta name="robots" content="noindex, nofollow">
-<link rel="alternate" type="application/rss+xml" title="Sanitär Schweizer » Feed" href="https://sanitaer-schweizer.ch/feed/">
+<link rel="alternate" type="application/rss+xml" title="Sanitär Schweizer » Feed" href="#">
 <link rel="alternate" type="application/rss+xml" title="Sanitär Schweizer » Kommentar-Feed" href="https://sanitaer-schweizer.ch/comments/feed/">
 <link rel="alternate" type="application/rss+xml" title="Sanitär Schweizer » Home Kommentar-Feed" href="https://sanitaer-schweizer.ch/home/feed/">
 <script>
@@ -133,8 +133,8 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				<div class="elementor-element elementor-element-3d6265f5 elementor-widget elementor-widget-theme-site-logo elementor-widget-image" data-id="3d6265f5" data-element_type="widget" data-widget_type="theme-site-logo.default">
 				<div class="elementor-widget-container">
 			<style>/*! elementor - v3.23.0 - 15-07-2024 */
-.elementor-widget-image{text-align:center}.elementor-widget-image a{display:inline-block}.elementor-widget-image a img[src$=".svg"]{width:48px}.elementor-widget-image img{vertical-align:middle;display:inline-block}</style>						<a href="https://sanitaer-schweizer.ch/">
-			<h2>Rohrreinigung Augustin</h2></a>
+.elementor-widget-image{text-align:center}.elementor-widget-image a{display:inline-block}.elementor-widget-image a img[src$=".svg"]{width:48px}.elementor-widget-image img{vertical-align:middle;display:inline-block}</style>						<a href="#">
+			<h2>Rohrreinigung Reich</h2></a>
 									</div>
 				</div>
 				</div>
@@ -451,7 +451,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				</div>
 				<div class="elementor-element elementor-element-4df42c4 elementor-widget elementor-widget-text-editor" data-id="4df42c4" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							Rohrreinigung Augustin , ist Spezialist in allen Belangen rund um Heizung, Sanitär und Solar. Zu unseren Dienstleistungen gehören beispielsweise Reparaturen und Service von sanitären Anlagen und Heizungen, sowie Umbauten und Neubauten rund um den sanitären Bereich.						</div>
+							Rohrreinigung Reich , ist Spezialist in allen Belangen rund um Heizung, Sanitär und Solar. Zu unseren Dienstleistungen gehören beispielsweise Reparaturen und Service von sanitären Anlagen und Heizungen, sowie Umbauten und Neubauten rund um den sanitären Bereich.						</div>
 				</div>
 				</div>
 		<div class="elementor-element elementor-element-929b58d e-con-full e-flex e-con e-child" data-id="929b58d" data-element_type="container">
@@ -480,7 +480,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				</div>
 				<div class="elementor-element elementor-element-4df42c4 elementor-widget elementor-widget-text-editor" data-id="4df42c4" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							Rohrreinigung Augustin , ist Spezialist in allen Belangen rund um Heizung, Sanitär und Solar. Ein Traditionsunternehmen das jung geblieben ist. Ihr künftiger Arbeitgeber agiert selbstständig am Markt, erbringt professionelle Leistungen im Sanitärbereich und ist jederzeit mit den Neuheiten auf dem Markt vertraut.						</div>
+							Rohrreinigung Reich , ist Spezialist in allen Belangen rund um Heizung, Sanitär und Solar. Ein Traditionsunternehmen das jung geblieben ist. Ihr künftiger Arbeitgeber agiert selbstständig am Markt, erbringt professionelle Leistungen im Sanitärbereich und ist jederzeit mit den Neuheiten auf dem Markt vertraut.						</div>
 				</div>
 				</div>
 		<div class="elementor-element elementor-element-929b58d e-con-full e-flex e-con e-child" data-id="929b58d" data-element_type="container">
@@ -532,7 +532,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				</div>
 				<div class="elementor-element elementor-element-575a7df elementor-widget elementor-widget-text-editor" data-id="575a7df" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<p><strong>Rohrreinigung Augustin</strong><br>Hirtenstieg 60<br>22848 Norderstedt</p><p>+X(0)XX<br><a href="mailto:info@rohrreinigung-augustin.de" target="_blank" rel="noopener">info@rohrreinigung-augustin.de</a></p>						</div>
+							<p><strong>Rohrreinigung Reich</strong><br>Kieler Str. 70-74<br>25474 Bönningstedt</p><p>+X(0)XX<br><a href="mailto:info@rohrreinigung-reich.de" target="_blank" rel="noopener">info@rohrreinigung-reich.de</a></p>						</div>
 				</div>
 				</div>
 		<div class="elementor-element elementor-element-781c655 e-con-full e-flex e-con e-child" data-id="781c655" data-element_type="container">
@@ -575,16 +575,16 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 					<div class="e-con-inner">
 				<div class="elementor-element elementor-element-7164539c elementor-widget elementor-widget-heading" data-id="7164539c" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<div class="elementor-heading-title elementor-size-default">© 2024 Rohrreinigung Augustin, alle Rechte vorbehalten</div>		</div>
+			<div class="elementor-heading-title elementor-size-default">© 2024 Rohrreinigung Reich, alle Rechte vorbehalten</div>		</div>
 				</div>
 				<div class="elementor-element elementor-element-0d6882d elementor-nav-menu__align-center elementor-nav-menu--dropdown-none elementor-widget elementor-widget-nav-menu" data-id="0d6882d" data-element_type="widget" data-settings="{&quot;layout&quot;:&quot;horizontal&quot;,&quot;submenu_icon&quot;:{&quot;value&quot;:&quot;&lt;i class=\&quot;fas fa-caret-down\&quot;&gt;&lt;\/i&gt;&quot;,&quot;library&quot;:&quot;fa-solid&quot;}}" data-widget_type="nav-menu.default">
 				<div class="elementor-widget-container">
 						<nav class="elementor-nav-menu--main elementor-nav-menu__container elementor-nav-menu--layout-horizontal e--pointer-none">
-				<ul id="menu-1-0d6882d" class="elementor-nav-menu" data-smartmenus-id="1729799828199682"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2116"><a href="https://sanitaer-schweizer.ch/impressum/" class="elementor-item">Impressum</a></li>
+				<ul id="menu-1-0d6882d" class="elementor-nav-menu" data-smartmenus-id="1729799828199682"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2116"><a href="#" class="elementor-item">Impressum</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2114"><a href="#" class="elementor-item">Datenschutz</a></li>
 </ul>			</nav>
 						<nav class="elementor-nav-menu--dropdown elementor-nav-menu__container" aria-hidden="true" style="--menu-height: 0;">
-				<ul id="menu-2-0d6882d" class="elementor-nav-menu" data-smartmenus-id="1729799828200369"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2116"><a href="https://sanitaer-schweizer.ch/impressum/" class="elementor-item" tabindex="-1">Impressum</a></li>
+				<ul id="menu-2-0d6882d" class="elementor-nav-menu" data-smartmenus-id="1729799828200369"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2116"><a href="#" class="elementor-item" tabindex="-1">Impressum</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2114"><a href="#" class="elementor-item" tabindex="-1">Datenschutz</a></li>
 </ul>			</nav>
 				</div>
