--- a/impressum.html
+++ b/impressum.html
@@ -26,7 +26,7 @@ class="ie9"><![endif]--><!--[if (gt IE 9)|!(IE)]><!--><body><!--<![endif]-->
   <a href="index.html">startseite</a>
   
   Impressum</h2></div></div></div></div><div class="container slot-two-columns"><div class="row"><div class="col-xs-12 col-md-8">
-<a id="c8"></a><div class="content-text m-b-1"><div class="row"><div class="col-sm-12"><p class="bodytext"><strong>Postanschrift:</strong><br> Hirtenstieg 60, 22848 Norderstedt <br>  <br>  info@rohrreinigung-augustin.de</p><p class="bodytext">&nbsp;</p><p class="bodytext"><strong>Telefon:</strong> XXX<br> <strong>Fax:</strong> XXX<br> <strong>E-Mail:</strong> <a href="mailto:info@rohrreinigung-augustin.de"> info@rohrreinigung-augustin.de</a></p><p class="bodytext">&nbsp;</p><p class="bodytext"><strong>Geschäftsführer:</strong>  65428 Russelsheim Albercht Jan
+<a id="c8"></a><div class="content-text m-b-1"><div class="row"><div class="col-sm-12"><p class="bodytext"><strong>Postanschrift:</strong><br> Kieler Str. 70-74, 25474 Bönningstedt <br>  <br>  info@rohrreinigung-reich.de</p><p class="bodytext">&nbsp;</p><p class="bodytext"><strong>Telefon:</strong> XXX<br> <strong>Fax:</strong> XXX<br> <strong>E-Mail:</strong> <a href="mailto:info@rohrreinigung-reich.de"> info@rohrreinigung-reich.de</a></p><p class="bodytext">&nbsp;</p><p class="bodytext"><strong>Geschäftsführer:</strong>  Simon Reich
   
   
   
